--- a/Domain_API_Authorisation_in_Python.ipynb
+++ b/Domain_API_Authorisation_in_Python.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "The following code written in Python authorises API requests via client credentials, performs a request and receives a response. Ref: https://developer.domain.com.au/docs/authorisation/client-credentials-grant\n",
+        "The Domain API provides programmatic access in property data from www.domain.com.au. The following code written in Python authorises API requests via client credentials, performs a request and receives a response. Ref: https://developer.domain.com.au/docs/authorisation/client-credentials-grant\n",
         "\n"
       ]
     },
