--- a/NLP_(Bible_Text_Encoding_with_the_Universal_Text_Encoder).ipynb
+++ b/NLP_(Bible_Text_Encoding_with_the_Universal_Text_Encoder).ipynb
@@ -6,7 +6,7 @@
       "name": "NLP (Bible Text Encoding with the Universal Text Encoder)",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6Ue/xO0lqBsHJyoR2kA08",
+      "authorship_tag": "ABX9TyMIn8mmu49ijRUFvpFAOl2p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,8 @@
         "\n",
         "Cosine similarity is to quantify similarity (in meaning) between sentences. A similiarity close to 0 indicates that two sentences are similar in meaning.\n",
         "\n",
+        "References:\n",
         "\n",
-        "Refs:\n",
         "http://www.ijstr.org/final-print/dec2019/Lexical-And-Semantic-Analysis-Of-Sacred-Texts-Using-Machine-Learning-And-Natural-Language-Processing.pdf (see Section 3.4)\n",
         "\n",
         "https://tfhub.dev/google/universal-sentence-encoder/1"
