--- a/Bible_Sentiment_Analysis_with_NLP_Spark.ipynb
+++ b/Bible_Sentiment_Analysis_with_NLP_Spark.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMwDA2xFRTJ6TCHn0Xp0ZHh",
+      "authorship_tag": "ABX9TyPtbgUSQ5eyvsCFMEpW7esf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "source": [
         "!wget http://setup.johnsnowlabs.com/colab.sh -O - | bash"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "import sparknlp\n",
         "from sparknlp.pretrained import PretrainedPipeline"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "source": [
         "spark = sparknlp.start()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "source": [
         "pipeline = PretrainedPipeline('analyze_sentimentdl_glove_imdb', lang = 'en')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,6 +153,8 @@
         "outputId": "c6894938-3cc7-45f8-c7d0-ed169437bcc5"
       },
       "source": [
+        "#create dictionary \n",
+        "\n",
         "import csv\n",
         "!curl https://raw.githubusercontent.com/EswarGitHub/BibleSearch/master/bible_data_set.csv -o bible_data_set.csv\n",
         "reader = csv.reader(open('bible_data_set.csv', 'r'))\n",
@@ -161,7 +163,7 @@
         "  k,_,_,_,v = row\n",
         "  d[k] = v[:-2] #  "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +184,7 @@
       "source": [
         "del d['citation'] #remove header row"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +200,7 @@
       "source": [
         "d['Genesis 1:1']"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +230,7 @@
         "    book = verse.split()[0]\n",
         "  return(book)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,6 +239,7 @@
         "id": "BO7RwyBEI7Sb"
       },
       "source": [
+        "#take dictionary, create two lists, one with keys (verse), one with values (text)\n",
         "verses = []\n",
         "text = []\n",
         "\n",
@@ -244,7 +247,7 @@
         "  verses.append(verse)\n",
         "  text.append(d[verse])\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,9 +256,10 @@
         "id": "DtwSltolI94A"
       },
       "source": [
+        "#feed text into pipeline\n",
         "annotations =  pipeline.fullAnnotate(text)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +274,7 @@
       "source": [
         "len(sentiment)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,11 +294,12 @@
         "id": "85Mi9NtJVIfr"
       },
       "source": [
+        "#extract sentiment (score) from each annotation\n",
         "sentiment = []\n",
         "for i in range(len(annotations)):\n",
         "  sentiment.append(float(annotations[i]['sentiment'][0].metadata['pos']))"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +312,7 @@
         "for verse in verses:\n",
         "  book.append(convertVerseToBook(verse))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,9 +321,10 @@
         "id": "eUP5XR3McjCd"
       },
       "source": [
+        "#put everything together\n",
         "zippedList =  list(zip(verses, book, sentiment, text))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +335,7 @@
       "source": [
         "df =  pd.DataFrame(zippedList, columns = ['Verse' , 'Book', 'Sentiment', 'Text'])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +351,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +500,7 @@
         "results = df.groupby('Book')['Sentiment'].mean().sort_values(ascending=False)\n",
         "print(results)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +591,7 @@
       "source": [
         "ax = results.plot.bar(x='Book',figsize=(20,5))"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
